# CodeProjects

./: .gitignore  .swo  README.md  dill.session.sql  index.md  myip.txt  test.c
CProjects/: CMakeLists.txt  Doxyfile  latex_recession_table.txt
CProjects/ARK/: CMakeLists.txt
CProjects/ARK/include/: ark.hpp
CProjects/ARK/src/: ark.cpp  arkmain.cpp  arkml.cpp
CProjects/ASK/: CMakeLists.txt
CProjects/ASK/include/: ask.hpp
CProjects/ASK/src/: ask.cpp  askmain.cpp  askml.cpp
CProjects/CProgLangEx/: 4EYI23L2FA.txt  CMakeLists.txt  cpl_1_21.c  fnq  fnq.c  foo.c  gsub  makefile
CProjects/CRT/: CMakeLists.txt
CProjects/CRT/include/: .CRT.hpp.swo  CRT.hpp
CProjects/CRT/src/: .crt.cpp.swo  .crtmain.cpp.swo  crt.cpp  crtml.cpp
CProjects/Crb/: CMakeLists.txt
CProjects/Crb/src/: crb.cpp  crbml.cpp  mainchib.cpp
CProjects/CreateSampleData/: CMakeLists.txt
CProjects/CreateSampleData/include/: CreateSampleData.hpp
CProjects/CreateSampleData/src/: CreateSampleData.cpp  main.cpp
CProjects/DiscreteChoice/: CMakeLists.txt
CProjects/Distributions/: .CMakeLists.txt.swo  CMakeLists.txt
CProjects/EigenTools/: CMakeLists.txt
CProjects/FAVAR/: CMakeLists.txt
CProjects/GelfandDey/: CMakeLists.txt
CProjects/GnuPlotting/: CMakeLists.txt
CProjects/Importance/: CMakeLists.txt
CProjects/MVProbit/: CMakeLists.txt
CProjects/MetropolisHastings/: CMakeLists.txt
CProjects/MultilevelModel/: CMakeLists.txt  factor_index_list.txt  latitude  timebreaks x
CProjects/NumericalAnalysis/: a.out  binomialCoef.c  bisectionMethod  bisectionMethod.c  normal.c
CProjects/OptimizationTools/: CMakeLists.txt  README.md
CProjects/Simulation/: .CMakeLists.txt.swo  CMakeCache.txt  CMakeLists.txt  rentaldata.numbers
CProjects/Simulators/: CMakeLists.txt
CProjects/Stat225/: CMakeLists.txt
CProjects/TimeSeries/: CMakeLists.txt
CProjects/ann/: CMakeLists.txt  ann.cpp  fname.p
CProjects/cppProjects/: .ycm_extra_conf.py  CMakeCache.txt  CmakeLists.txt  Dist.hpp  Makefile  ProbabilitySimulator.cpp  Psim.cpp  a.out  cmake_install.cmake  example.cpp  examplec  hellocmake.cpp  igamma.txt  mvn.txt  psim  spikeSlab.cpp  testfile.txt  testplots.p
CProjects/firstC/: a.out  blank.c  bst  bst.c  c_header.h  file  functions.c  hellomake  m  mit  mit.c  mitocwmain.c  test_bst.c
CProjects/hackerrank/: isbst.cpp  largest.cpp  largestsubarray.cpp  leftturn.cpp  nthfromend.cpp  rearrange.cpp  remove_duplicates.cpp  removeloop.cpp  ruleofthree  ruleofthree.cpp  singlylinkedlist.cpp  sortonebyanother.cpp  subarray.cpp  test2sols.txt  testbig.txt  tibra_interview.cpp  tibra_maxpath.cpp  trie.cpp  trie.hpp  triemain.cpp  wordhunt.cpp
CProjects/html/: AutoregressiveModel_8hpp.html  AutoregressiveModel_8hpp__dep__incl.map  AutoregressiveModel_8hpp__dep__incl.md5  AutoregressiveModel_8hpp__incl.map  AutoregressiveModel_8hpp__incl.md5  AutoregressiveModel_8hpp_source.html  BayesianUpdates_8hpp.html  BayesianUpdates_8hpp__dep__incl.map  BayesianUpdates_8hpp__dep__incl.md5  BayesianUpdates_8hpp__incl.map  BayesianUpdates_8hpp__incl.md5  BayesianUpdates_8hpp_source.html  CreateSampleData_2build_2CMakeFiles_2feature__tests_8c.html  CreateSampleData_2build_2CMakeFiles_2feature__tests_8cxx.html  CreateSampleData_2include_2CreateSampleData_8hpp.html  CreateSampleData_2include_2CreateSampleData_8hpp__incl.map  CreateSampleData_2include_2CreateSampleData_8hpp__incl.md5  CreateSampleData_2include_2CreateSampleData_8hpp_source.html  CreateSampleData_2src_2CreateSampleData_8cpp.html  CreateSampleData_2src_2CreateSampleData_8cpp__incl.map  CreateSampleData_2src_2CreateSampleData_8cpp__incl.md5  DiscreteChoice_2build_2CMakeFiles_2feature__tests_8c.html  DiscreteChoice_2build_2CMakeFiles_2feature__tests_8cxx.html  Dist2_8hpp.html  Dist2_8hpp__incl.map  Dist2_8hpp__incl.md5  Dist2_8hpp_source.html  Dist_8cpp.html  Dist_8cpp__incl.map  Dist_8cpp__incl.md5  Dist_8hpp.html  Dist_8hpp__dep__incl.map  Dist_8hpp__dep__incl.md5  Dist_8hpp__incl.map  Dist_8hpp__incl.md5  Dist_8hpp_source.html  Distributions_8cpp.html  Distributions_8cpp__incl.map  Distributions_8cpp__incl.md5  Distributions_8hpp.html  (+940 more)
CProjects/latex/: AutoregressiveModel_8hpp.tex  AutoregressiveModel_8hpp__dep__incl.md5  AutoregressiveModel_8hpp__incl.md5  BayesianUpdates_8hpp.tex  BayesianUpdates_8hpp__dep__incl.md5  BayesianUpdates_8hpp__incl.md5  CreateSampleData_2build_2CMakeFiles_2feature__tests_8c.tex  CreateSampleData_2build_2CMakeFiles_2feature__tests_8cxx.tex  CreateSampleData_2include_2CreateSampleData_8hpp.tex  CreateSampleData_2include_2CreateSampleData_8hpp__incl.md5  CreateSampleData_2src_2CreateSampleData_8cpp.tex  CreateSampleData_2src_2CreateSampleData_8cpp__incl.md5  DiscreteChoice_2build_2CMakeFiles_2feature__tests_8c.tex  DiscreteChoice_2build_2CMakeFiles_2feature__tests_8cxx.tex  Dist2_8hpp.tex  Dist2_8hpp__incl.md5  Dist_8cpp.tex  Dist_8cpp__incl.md5  Dist_8hpp.tex  Dist_8hpp__dep__incl.md5  Dist_8hpp__incl.md5  Distributions_8cpp.tex  Distributions_8cpp__incl.md5  Distributions_8hpp.tex  Distributions_8hpp__dep__incl.md5  Distributions_8hpp__incl.md5  EigenTools_8cpp.tex  EigenTools_8cpp__incl.md5  EigenTools_8hpp.tex  EigenTools_8hpp__dep__incl.md5  EigenTools_8hpp__incl.md5  GelfandDey_2build_2CMakeFiles_2feature__tests_8c.tex  GelfandDey_2build_2CMakeFiles_2feature__tests_8cxx.tex  GelfandDey_2include_2LinRegGibbs_8hpp.tex  GelfandDey_2include_2LinRegGibbs_8hpp__incl.md5  GelfandDey_2src_2LinRegGibbs_8cpp.tex  GelfandDey_2src_2LinRegGibbs_8cpp__incl.md5  GelfandDey_8cpp.tex  GelfandDey_8cpp__dep__incl.md5  GelfandDey_8cpp__incl.md5  (+485 more)
CProjects/leetcode/: good_pairs.cpp  longest_palindrome  longest_palindrome.cpp  median  median.cpp  merge.cpp
CProjects/pybind/: main.cpp
CProjects/random/: CMakeCache.txt  CMakeLists.txt  CMakeLists_BACKUP_44502.txt  CMakeLists_REMOTE_44502.txt  FindSQLite3.cmake  Makefile  cmake_install.cmake  deg  doublep.c  optimize.cpp  simplex.ipynb  tableau.cpp  tableau_BACKUP_146835.cpp  tableau_LOCAL_146835.cpp
CProjects/testboost/: CMakeLists.txt
YCMTest/: CMakeLists.txt
YCMTest/src/: testmain.cpp
(+1694 files in other folders)
