# TOP LEVEL CMAKE
cmake_minimum_required(VERSION 2.8.9 FATAL_ERROR)
project(mvt)

find_package(Boost  REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
set(CMAKE_BUILD_TYPE Debug)
set(EIGEN "/usr/local/include/eigen3")
set(UNSUPP "/usr/local/include/eigen3/unsupported")
set(CMAKE_CXX_FLAGS "-O3")

add_subdirectory(build/src/DistLib)
add_subdirectory(build/src/CreateSampleDataLib)
add_subdirectory(build/src/CrbLib)
add_subdirectory(build/src/AskLib)
add_subdirectory(build/src/ArkLib)
add_subdirectory(build/src/CrtLib)
add_subdirectory(build/src/ImpLib)
add_subdirectory(build/src/LinRegGibbsLib)
add_subdirectory(build/src/ReadCsvLib)
include_directories(include  ${BOOST_INCLUDE_DIRS} ${EIGEN} ${UNSUPP})
message(STATUS "Boost include  dirs  " ${Boost_INCLUDE_DIRS})
MESSAGE( STATUS "CMAKE_CXX_FLAGS:    " ${CMAKE_CXX_FLAGS} )
message(STATUS "Eigen3 dir           " ${EIGEN})
add_executable(mvt src/varmain.cpp src/timeseries.cpp src/eigenshorts.cpp )
target_link_libraries(mvt Dist Crb CreateSampleData Ark Ask Crt Imp Lrg ReadCsv )
