# set(tstools ${CMAKE_CURRENT_SOURCE_DIR}/src/TimeSeriesTools.cpp)
# add_library(tstools STATIC ${tstools})
# target_include_directories(tstools PUBLIC)
# target_include_directories(tstools PUBLIC include)
# add_executable(tstools src/Test_EigenTools.cpp)
# target_link_libraries(tstools PUBLIC ettools)
 
