# LRG Module
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(LinRegGibbs)
set(CMAKE_CXX_STANDARD 11)
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
cmake_policy(SET CMP0042 NEW)
set(EIGEN_DIR "/usr/local/include/eigen3/" )
set(PYTHON_INCLUDE_DIRS "//anaconda/include/python2.7")
set(PYTHON_LIBRARY "//anaconda/lib/libpython2.7.dylib")
find_package(Boost 1.66.0 COMPONENTS python)
if(Boost_FOUND)
	set(Boost_USE_STATIC_LIBS OFF)
	set(Boost_USE_MULTITHREADED ON)
	set(Boost_USE_STATIC_RUNTIME OFF)
	include_directories(${Boost_INCLUDE_DIRS} ${EIGEN_DIR} ${PYTHON_INCLUDE_DIRS} include)
	message(STATUS ${PYTHON_LIBRARY})
	add_library (lrg MODULE src/example_ext.cpp)
	target_link_libraries(lrg ${Boost_LIBRARIES} ${PYTHON_LIBRARY})
endif()
install(TARGETS lrg DESTINATION "/usr/local/lib")
